--- a/now.json
+++ b/now.json
@@ -1,5 +1,4 @@
 {
   "version": 2,
-  "builds": [{ "src": "*", "use": "@now/static" }],
-  "regions": ["sfo1", "bru"]
+  "builds": [{ "src": "*", "use": "@now/static" }]
 }
