--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "author": "Henrique Limas <hlimas@ebay.com>",
   "license": "ISC",
   "dependencies": {
-    "now": "^12.1.9",
     "osagai": "^0.0.10"
   },
   "devDependencies": {
@@ -22,7 +21,12 @@
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "minify-lit-html-loader": "0.0.3",
+    "now": "^12.1.9",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.1",
+    "uglify-template-string-loader": "^1.1.0",
     "webpack": "^4.26.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-middleware": "^3.4.0",
