--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack-dev-server --open --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
-    "deploy": "npm run build && npm run cp:now && now dist"
+    "deploy": "npm run build && firebase deploy"
   },
   "author": "Henrique Limas <hlimas@ebay.com>",
   "license": "ISC",
@@ -20,10 +20,10 @@
     "css-loader": "^1.0.1",
     "express": "^4.16.4",
     "file-loader": "^2.0.0",
+    "firebase-tools": "^6.1.2",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "minify-lit-html-loader": "0.0.3",
-    "now": "^12.1.9",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "style-loader": "^0.23.1",
     "uglify-template-string-loader": "^1.1.0",
