--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@webcomponents/webcomponentsjs": "^2.2.1",
-    "osagai": "^0.0.10"
+    "osagai": "^0.0.10",
+    "osagai-simple-router": "^0.1.1"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^1.0.0",
